[project]
name = "cylmore-steganography-kit"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Malinovskiy",email = "malinovskiy.sergey.olegovich@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "simple-encryptor (>=0.2.3,<0.3.0)",
    "stegosphere (>=1.3,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
